--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -43,7 +43,7 @@
         <nav class="navigation-menu">
           <ul class="navigation-menu__list">
             <li class="navigation-menu__item">
-              <a href="/" class="navigation-menu__link">Home</a>
+              <a href="index.html" class="navigation-menu__link">Home</a>
             </li>
             <li class="navigation-menu__item">
               <a href="catalog.html" class="navigation-menu__link">Catalog</a>
