--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,8 +50,7 @@
             </li>
             <li class="navigation-menu__item">
               <a href="library.html" class="navigation-menu__link"
-                >My library</a
-              >
+                >My library</a>
             </li>
           </ul>
         </nav>
