corrected key name

--- a/src/partials/upcoming.html
+++ b/src/partials/upcoming.html
@@ -1,7 +1,5 @@
 
     <div class="upcoming">
-        <div class="upcoming__container container">
-       <h2 class="upcoming__title">Upcoming this month</h2>
-        </div>       
+        <div class="upcoming__container container"></div>       
     </div>
 
