add hero markup

--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -8,7 +8,7 @@
 @import './upcoming';
 
 // -- catalog --//
-@import './hero-home';
+// @import './hero-home';
 @import './seach-catalog';
 @import './card-catalog';
 @import './pagination-catalog';
