--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header-menu">
-      <a href="/" class="logo">
+      <a href="index.html" class="logo">
         <div class="logo__img"></div>
         <span class="logo__text">Cinemania</span>
       </a>
