--- a/src/partials/card-library.html
+++ b/src/partials/card-library.html
@@ -1,6 +1,6 @@
 <section class="library-cards">
   <div class="library container">
-    <ul class="library-cards__list"></ul>
+    <ul class="gallery library-cards__list"></ul>
   </div>
 </section>
 
