create search form

--- a/src/sass/layouts/_seach-catalog.scss
+++ b/src/sass/layouts/_seach-catalog.scss
@@ -1,79 +1,77 @@
-.search-wrapper {
-    background-color: var(--bg-primary);
+// .search-wrapper {
+//     background-color: var(--bg-primary);
 
-    display: flex;
-    gap: 8px;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    padding-top: 40px;
-    padding-bottom: 28px;
-    
-    @include tablet {
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 5px;
-    padding-top: 60px;
-    padding-bottom: 40px;
-    }
-    
-    @include desktop {
-    padding-top: 60px;
-    padding-bottom: 80px;
-    }
-}
+//     display: flex;
+//     gap: 8px;
+//     flex-wrap: wrap;
+//     align-content: center;
+//     justify-content: center;
+//     padding-top: 40px;
+//     padding-bottom: 28px;
 
-.search-form {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 16px;
-    position: absolute;
-    width: 264px;
-    height: 44px;
-    top: auto;
-}
+//     @include tablet {
+//     flex-direction: row;
+//     flex-wrap: nowrap;
+//     gap: 5px;
+//     padding-top: 60px;
+//     padding-bottom: 40px;
+//     }
 
-.search-input-field {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 10px 12px 20px;
-    gap: 10px;
-    width: 204px;
-    height: 44px;
-    border: 1px solid #FFFFFF;
-    border-radius: 8px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;   
-}
+//     @include desktop {
+//     padding-top: 60px;
+//     padding-bottom: 80px;
+//     }
+// }
 
-.search-button {
-    width: 44px;
-    height: 44px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    padding: center;
-    gap: 10px;
-    margin-left: 16px;
-    width: 44px;
-    height: 44px;
-    background: linear-gradient(141.22deg, #FFC226 9.4%, #F84119 91.91%);
-    border-radius: 50px;
-    border: none;
-}
+// .search-form {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-start;
+//     padding: 0px;
+//     gap: 16px;
+//     position: absolute;
+//     width: 264px;
+//     height: 44px;
+//     top: auto;
+// }
 
-.icon-search {
-    width: 20px;
-    height: 20px;
-}
+// .search-input-field {
+//     box-sizing: border-box;
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+//     padding: 12px 10px 12px 20px;
+//     gap: 10px;
+//     width: 204px;
+//     height: 44px;
+//     border: 1px solid #FFFFFF;
+//     border-radius: 8px;
+//     flex: none;
+//     order: 0;
+//     flex-grow: 0;
+// }
 
+// .search-button {
+//     width: 44px;
+//     height: 44px;
+//     flex: none;
+//     order: 1;
+//     flex-grow: 0;
+//     padding: center;
+//     gap: 10px;
+//     margin-left: 16px;
+//     width: 44px;
+//     height: 44px;
+//     background: linear-gradient(141.22deg, #FFC226 9.4%, #F84119 91.91%);
+//     border-radius: 50px;
+//     border: none;
+// }
 
-.movie-list {
-    margin-top: 20px;
-}
+// .icon-search {
+//     width: 20px;
+//     height: 20px;
+// }
 
+// .movie-list {
+//     margin-top: 20px;
+// }
