--- a/src/partials/hero-home.html
+++ b/src/partials/hero-home.html
@@ -1,33 +1,26 @@
 <section class="hero">
-
-    <div class="hero__wrapper hero__home--wrapper container ">
-        <h1 class="hero__title title">Let’s Make Your Own Cinema</h1>
-        <p class="hero__text paragraphs">Is a guide to creating a personalized movie theater experience. You'll need a
-            projector,
-            screen, and speakers.
-            <span class="paragraph__hidden">Decorate your space, choose your films,
-                and stock up on snacks for the full experience.
-            </span>
-        </p>
-        <button type="button" class="hero__button buttons">Get Started</button>
-    </div>
-
-    <!-- bg -->
-    <picture>
-        <img class="hero__bg--img " srcset="
-      ./images/hero-home-desk.jpg    1x,
-      ./images/hero-home-desk2x.jpg 2x
-    " src="./images/hero-home-desk.jpg" alt="bg" />
-    </picture>
-
-
-    <!-- subtract -->
+<!--     
     <picture>
         <img class="hero__home--subtract subtract" srcset="
         ./images/hero-black-desk.png    1x,
         ./images/hero-black-desk2x.png 2x
       " src="./images/hero-black-desk.png" alt="subtract" />
-    </picture>
+    </picture> -->
+
+    
+        <div class="container hero-container">
+            <div class="hero__wrapper">
+                <h1 class="hero__title">Let’s Make Your Own Cinema</h1>
+                <p class="hero__text paragraphs">
+                    Is a guide to creating a personalized movie theater experience. You'll
+                    need a projector, screen, and speakers.
+                    <span class="hero-text-more">Decorate your space, choose your films, and stock up on snacks for
+                        the full experience.</span>
+                </p>
+                <a href="./catalog.html" class="hero__btn buttons">Get Started</a>
+            </div>
+        </div>
+    
 
 </section>
 
