--- a/src/sass/layouts/_hero-home.scss
+++ b/src/sass/layouts/_hero-home.scss
@@ -4,39 +4,66 @@
   position: relative;
 
   height: 380px;
-  overflow: hidden;
+  //   overflow: hidden;
   width: 100%;
   // margin: 0 auto;
 
+  margin-left: auto;
+  margin-right: auto;
+
+  background-position: 0 0, -50px 0;
+  background-repeat: no-repeat;
+  background-size: auto, cover;
+
   @include tablet {
-    height: 432px;
+    // height: 432px;
+    height: 372px;
+    max-width: 768px;
+
+    background-position: 0px 0px, 170px 0px;
+    background-size: contain, contain;
   }
 
   @include desktop {
-    height: 720px;
+    height: 660px;
+    max-width: 1280px;
+
+    background-size: auto, cover;
+    background-repeat: no-repeat;
+    background-position: 0px -60px, 275px -60px;
   }
 }
 
 .hero__wrapper {
-  position: absolute;
+  //   position: absolute;
   display: flex;
-  padding-top: 40px;
+  //   justify-content: space-around;
+  //   padding-top: 40px;
   align-items: flex-start;
   flex-direction: column;
   color: $color-text;
   // width: 464px;
   z-index: 999;
+  width: 250px;
+  height: 100%;
+  padding-top: 40px;
+  margin-left: 20px;
 
   @include tablet {
-    padding-top: 62px;
-    padding-bottom: 62px;
+    padding-top: 36px;
+    width: 350px;
+    margin-left: 32px;
+
+    // justify-content: center;
   }
 
   @include desktop {
-    // width: 464px;
+    width: 464px;
+    margin-left: 130px;
+
     // height: 322px;
-    padding-top: 169px;
-    padding-bottom: 169px;
+    padding-top: 118px;
+    // padding-bottom: auto;
   }
 }
 
@@ -55,10 +82,18 @@
   padding: 12px 24px;
   font-family: 'Roboto';
   font-style: normal;
+  color: $color-primary-dark;
 
   background: linear-gradient(141.22deg, #ffc226 9.4%, #f84119 91.91%);
   border-radius: 74px;
-  border: none;
+  //   border: solid 1px;
+
+  &:hover,
+  &:focus {
+    background: $color-text;
+    border-color: linear-gradient(141.22deg, #ffc226 9.4%, #f84119 91.91%);
+    color: $color-accent;
+  }
 
   @include tablet {
     font-size: 14px;
@@ -73,6 +108,7 @@
 
 .paragraphs {
   display: inline-block;
+  width: 166px;
 
   font-family: 'Roboto';
   font-style: normal;
@@ -87,42 +123,42 @@
   }
 }
 
-.subtract {
-  position: absolute;
-  background-repeat: no-repeat;
-  height: 380px;
+// .subtract {
+//   position: absolute;
+//   background-repeat: no-repeat;
+//   height: 380px;
 
-  width: 100vw;
-  z-index: 998;
-  top: 0;
-  left: 0;
+//   width: 100vw;
+//   z-index: 998;
+//   top: 0;
+//   left: 0;
 
-  background-image: url('../images/hero-black-tel.png');
-  // ?  ==========================HERE=======================================
-  //   background-image: linear-gradient(
-  //       87.8deg,
-  //       #0e0e0e 15.61%,
-  //       rgba(14, 14, 14, 0) 60.39%
-  //     ),
-  //     url('../images/hero-black-tel.png');
-  //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  // ?  =================================================================
+//   background-image: url('../images/hero-black-tel.png');
+//   // ?  ==========================HERE=======================================
+//   //   background-image: linear-gradient(
+//   //       87.8deg,
+//   //       #0e0e0e 15.61%,
+//   //       rgba(14, 14, 14, 0) 60.39%
+//   //     ),
+//   //     url('../images/hero-black-tel.png');
+//   //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+//   // ?  =================================================================
 
-  // @include retina{
-  //     background-image: url('../images/hero-black-tel2x.png') ;
-  // }
+//   // @include retina{
+//   //     background-image: url('../images/hero-black-tel2x.png') ;
+//   // }
 
-  @include tablet {
-    background-image: url('../images/hero-black-tab.png');
-    height: 432px;
-  }
+//   @include tablet {
+//     background-image: url('../images/hero-black-tab.png');
+//     height: 432px;
+//   }
 
-  @include desktop {
-    height: 720px;
+//   @include desktop {
+//     height: 720px;
 
-    background-image: url('../images/hero-black-desk.png');
-  }
-}
+//     background-image: url('../images/hero-black-desk.png');
+//   }
+// }
 
 //!=============================HOME===================================
 
@@ -176,28 +212,28 @@
   }
 }
 
-.hero__home--wrapper {
-  //   padding-top: 40px;
-  //   padding-bottom: 89px;
-  z-index: 999;
-  width: 199px;
-  height: auto;
+// .hero__home--wrapper {
+//   //   padding-top: 40px;
+//   //   padding-bottom: 89px;
+//   z-index: 999;
+//   width: 199px;
+//   height: auto;
 
-  @include tablet {
-    width: 357px;
-    // height: 248px;
+//   @include tablet {
+//     width: 357px;
+//     // height: 248px;
 
-    // padding-top: 62px;
-    // padding-bottom: 62px;
-  }
+//     // padding-top: 62px;
+//     // padding-bottom: 62px;
+//   }
 
-  @include desktop {
-    width: 464px;
-    // height: 322px;
-    // padding-top: 169px;
-    // padding-bottom: 169px;
-  }
-}
+//   @include desktop {
+//     width: 464px;
+//     // height: 322px;
+//     // padding-top: 169px;
+//     // padding-bottom: 169px;
+//   }
+// }
 
 // .hero__home--subtract {
 
@@ -239,166 +275,163 @@
   }
 }
 
-.hero__button {
+.hero__btn {
   width: 110px;
-  height: 38px;
   margin-top: 16px;
   @include tablet {
     width: 120px;
-    height: 40px;
     margin-top: 32px;
   }
 
   @include desktop {
     width: 130px;
-    height: 48px;
   }
 }
 
 //!==============================HERO MOVIE MARKUP STYLES==================================
 
-.slider {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+// .slider {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
 
-//   margin-top: 52px;
+// //   margin-top: 52px;
 
+// }
+// .slider__item {
+//   // position: relative;
 
-}
-.slider__item {
-  // position: relative;
+//   width: 24px;
+//   height: 24px;
 
-  width: 24px;
-  height: 24px;
-
-  @include tablet {
-    width: 32px;
-    height: 32px;
-  }
-
-  @include desktop {
-    width: 40px;
-    height: 40px;
-  }
-
-  &:not(:last-child) {
-    margin-right: 16px;
-    //   color: #b7b7b7;
-  }
-}
-
-.hero__slider-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  // position: relative;
-
-  //   position: absolute;
-  //   top: 50%;
-  //   align-items: center;
-  cursor: pointer;
-  background-color: transparent;
-  width: 24px;
-  height: 24px;
-
-  //   position: relative;
-  // align-items: center;
-  // justify-content: center;
-  //   top: 34%;
-  //   left: 38%;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 14px;
-  border: 1px solid #b7b7b7;
-  border-radius: 50%;
-  /* identical to box height, or 100% */
-
-  /* Grey */
-
-  color: $color-text-secondary;
-
-  transition-property: background-color, color;
-  transition-duration: 250ms;
-  transition-timing-function: $cubic;
-
-  &:hover,
-  &:focus {
-    color: $color-text;
-    background-color: $color-text-focus;
-  }
-
-  @include tablet {
-    width: 32px;
-    height: 32px;
-  }
-
-  @include desktop {
-    width: 40px;
-    height: 40px;
-  }
-}
-
-.watch__btn {
-  width: 117px;
-  height: 38px;
-//   margin-top: 16px;
-  @include tablet {
-    // margin-top: 28px;
-    width: 128px;
-    height: 40px;
-  }
-
-  @include desktop {
-    // margin-top: 36px;
-    width: 139px;
-    height: 48px;
-  }
-}
-
-// .hero__movie-descripton {
-//   margin-top: 20px;
+//   @include tablet {
+//     width: 32px;
+//     height: 32px;
+//   }
 
 //   @include desktop {
-//     margin-top: 28px;
+//     width: 40px;
+//     height: 40px;
+//   }
+
+//   &:not(:last-child) {
+//     margin-right: 16px;
+//     //   color: #b7b7b7;
 //   }
 // }
 
-.hero__movie--wrapper {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
- 
+// .hero__slider-btn {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   // position: relative;
 
-  position: absolute;
-  z-index: 999;
-  width: 199px;
-  height: auto;
+//   //   position: absolute;
+//   //   top: 50%;
+//   //   align-items: center;
+//   cursor: pointer;
+//   background-color: transparent;
+//   width: 24px;
+//   height: 24px;
 
-  width: 250px;
-  height: 100%;
-  flex-direction: column;
-  //   padding-top: 40px;
-  //   padding-bottom: 28px;
+//   //   position: relative;
+//   // align-items: center;
+//   // justify-content: center;
+//   //   top: 34%;
+//   //   left: 38%;
+//   font-family: 'Roboto';
+//   font-style: normal;
+//   font-weight: 400;
+//   font-size: 14px;
+//   line-height: 14px;
+//   border: 1px solid #b7b7b7;
+//   border-radius: 50%;
+//   /* identical to box height, or 100% */
 
+//   /* Grey */
+
+//   color: $color-text-secondary;
+
+//   transition-property: background-color, color;
+//   transition-duration: 250ms;
+//   transition-timing-function: $cubic;
+
+//   &:hover,
+//   &:focus {
+//     color: $color-text;
+//     background-color: $color-text-focus;
+//   }
+
+//   @include tablet {
+//     width: 32px;
+//     height: 32px;
+//   }
+
+//   @include desktop {
+//     width: 40px;
+//     height: 40px;
+//   }
+// }
+
+.watch__btn {
+  //   width: 117px;
+  //   height: 38px;
+  margin-top: 16px;
   @include tablet {
-  
-    width: 350px;
-
-    // padding-top: 36px;
-    // padding-bottom: 36px;
+    margin-top: 28px;
+    // width: 128px;
+    // height: 40px;
   }
 
   @include desktop {
-    width: 464px;
-
-    
-    // padding-bottom: 178px;
-    // padding-top: 118px;
+    margin-top: 36px;
+    // width: 139px;
+    // height: 48px;
   }
 }
+
+.hero__movie-descripton {
+  //   margin-top: 16px;
+
+  width: 100%;
+  overflow: hidden;
+
+  //   @include desktop {
+  //     margin-top: 28px;
+  //   }
+}
+
+// .hero__movie--wrapper {
+//   display: flex;
+//   justify-content: space-evenly;
+//   align-items: flex-start;
+
+//   position: absolute;
+//   z-index: 999;
+//   width: 199px;
+//   height: auto;
+
+//   width: 250px;
+//   height: 100%;
+//   flex-direction: column;
+//   //   padding-top: 40px;
+//   //   padding-bottom: 28px;
+
+//   @include tablet {
+
+//     width: 350px;
+
+//     // padding-top: 36px;
+//     // padding-bottom: 36px;
+//   }
+
+//   @include desktop {
+//     width: 464px;
+
+//     // padding-bottom: 178px;
+//     // padding-top: 118px;
+//   }
+// }
 
 .hero__vote {
   display: flex;
