--- a/src/partials/card-catalog.html
+++ b/src/partials/card-catalog.html
@@ -1,6 +1,6 @@
-<section class="card-catalog">
+<!-- <section class="card-catalog">
   <div class="container">
     <ul class="gallery gallery-catalog">
     </ul>
   </div>
-</section>
+</section> -->
