--- a/src/partials/seach-catalog.html
+++ b/src/partials/seach-catalog.html
@@ -12,7 +12,7 @@
     </section>
 </div> -->
 
-<section class="block section">
+<section class="block_section">
   <div class="container__block container">
     <form class="form__block" id="search-form">
       <div class="form__wrapper">
@@ -38,11 +38,7 @@
       <ul class="items__error" id="cards__error"></ul>
       <div class="items__wrapper">
         <div class="items__message items__disabled">
-          <p class="items__text">
-            OOPS...<br />
-            We are very sorry!<br />
-            We don’t have any results due to your search.
-          </p>
+          <p class="items__text"></p>
         </div>
 
         <ul class="items__list" id="movie-list"></ul>
@@ -50,7 +46,7 @@
 
       <div class="pagination">
         <button class="btn-back" id="btn-back">Prev</button>
-        <button class="btn-next" id="btn-next">Next</button>
+        <button class="btn-back" id="btn-next">Next</button>
       </div>
     </section>
   </div>
