--- a/src/partials/seach-catalog.html
+++ b/src/partials/seach-catalog.html
@@ -33,13 +33,14 @@
         </button>
     </form>
 
-       
-
-      <!-- <div class="pagination">
-        <button class="btn-back" id="btn-back">Prev</button>
-        <button class="btn-next" id="btn-next">Next</button>
-      </div> -->
-  
   </div>
-  <ul class="gallery gallery-catalog" id="movie-list"></ul>
 </section>
+
+<section class="card-catalog">
+  <div class="container">
+    <ul class="gallery gallery-catalog" id="movie-list">
+    </ul>
+  </div>
+</section>
+
+
