--- a/src/partials/seach-catalog.html
+++ b/src/partials/seach-catalog.html
@@ -1,22 +1,8 @@
-<!-- <div class="search-wrapper">
-    <form class="search-form">
-        <input type="text" class="search-input-field" placeholder="Search">
-        <button type="submit" class="search-button" aria-label="Search">
-            <svg class="icon-search" width="20" height="20">
-                <use xlink:href="./images/symbol-defs.svg#icon-search" alt="Search icon"></use>
-            </svg>
-        </button>
-    </form>
-    <section>
-        <div class="movie-list"></div>
-    </section>
-</div> -->
-
-<section class="block section">
+<section class="search">
   <div class="search-wrapper">
         <form class="search-form" id="search-form">
         <input
-          class="input__block"
+          class="search-input-field"
           type="text"
           name="search"
           id="search-input"
@@ -34,6 +20,8 @@
     </form>
 
   </div>
+
+  
 </section>
 
 <section class="card-catalog">
