--- a/src/sass/layouts/_seach-catalog.scss
+++ b/src/sass/layouts/_seach-catalog.scss
@@ -1,79 +1,94 @@
 .search-wrapper {
-    background-color: var(--bg-primary);
-
     display: flex;
     gap: 8px;
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
+
     padding-top: 40px;
     padding-bottom: 28px;
 
+    background-color: var(--bg-primary);
+
     @include tablet {
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 5px;
-    padding-top: 60px;
-    padding-bottom: 40px;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 5px;
+
+        padding-top: 60px;
+        padding-bottom: 40px;
     }
 
     @include desktop {
-    padding-top: 60px;
-    padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 80px;
     }
 }
 
-
 .search-form {
+    position: absolute;
+    top: auto;
+
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
     gap: 16px;
-    position: absolute;
+
+    padding: 0px;
+
     width: 264px;
     height: 44px;
-    top: auto;
- 
 }
 
-// .search-input-field {
-//     box-sizing: border-box;
-//     display: flex;
-//     flex-direction: row;
-//     align-items: center;
-//     padding: 12px 10px 12px 20px;
-//     gap: 10px;
-//     width: 204px;
-//     height: 44px;
-//     border: 1px solid #FFFFFF;
-//     border-radius: 8px;
-//     flex: none;
-//     order: 0;
-//     flex-grow: 0;
-// }
+.search-input-field {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    // flex: none;
+    flex-grow: 0;
+
+    width: 204px;
+    height: 44px;
+
+    padding: 12px 10px 12px 20px;
+
+    box-sizing: border-box;
+
+    border: 1px solid #FFFFFF;
+    border-radius: 8px;
+
+    order: 0;
+
+
+    background-color: transparent;
+    @include font-text ($fw: 500);
+    color: $color-text-secondary;
+}
 
 .search-button {
+    margin-left: 16px;
+    padding: center;
+
     width: 44px;
     height: 44px;
+
     flex: none;
     order: 1;
-    flex-grow: 0;
-    padding: center;
-    gap: 10px;
-    margin-left: 16px;
-    width: 44px;
-    height: 44px;
+
     background: linear-gradient(141.22deg, #FFC226 9.4%, #F84119 91.91%);
     border-radius: 50px;
     border: none;
 }
 
-// .icon-search {
-//     width: 20px;
-//     height: 20px;
-// }
+.no-results {
+    color: $color-text;
+    text-align: center;
 
-// .movie-list {
-//     margin-top: 20px;
-// }
+    @include font-text ($fs: 32, $lh: 1.12);
+}
+
+.icon-search {
+    width: 20px;
+    height: 20px;
+}
