changed color of thr btn

--- a/src/sass/layouts/_upcoming.scss
+++ b/src/sass/layouts/_upcoming.scss
@@ -198,7 +198,6 @@ color: var(--color-text-secondary);
   flex-direction: row;
   align-items: center;
   text-align: center;
-  z-index: 10;
   padding: 12px 24px;
   gap: 10px; 
   margin-top: 20px;
@@ -213,7 +212,12 @@ color: var(--color-text-secondary);
   background: linear-gradient(141.22deg, #FFC226 9.4%, #F84119 91.91%);
   border-radius: 74px;
   border: none;
-  
+  &:hover,
+  &:focus {
+    background: $color-text;
+    border-color: linear-gradient(141.22deg, #ffc226 9.4%, #f84119 91.91%);
+    color: $color-accent;
+  }
 
   @include tablet{
   @include font-title($fs: 14, $lh: 1.14, $ls: 0);
