--- a/src/sass/layouts/_hero-library.scss
+++ b/src/sass/layouts/_hero-library.scss
@@ -15,7 +15,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 1600px;
+  max-width: 100vw;
 
   @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
