--- a/src/partials/card-library.html
+++ b/src/partials/card-library.html
@@ -10,5 +10,8 @@
     We are very sorry!<br />
     You don’t have any movies at <br /> your library.
   </h2>
-  <button type="button" class="library-cards__btn">Search movie</button>
+
+  <button type="button" class="library-cards__btn">
+    <a href="./catalog.html">Search movie</a>
+  </button>
 </div>
