--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -122,6 +122,7 @@
   width: 54px;
   height: 20px;
   padding-top: 20px;
+  cursor: pointer;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background: linear-gradient(141.22deg, #ffc226 9.4%, #f84119 91.91%);
   border-radius: 194px;
